--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ local.properties
 
 # ignore properties file
 config.properties
+application.yml
 
 # External tool builders
 .externalToolBuilders/
