--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -52,7 +52,7 @@ jobs:
 
       - name: docker image build
         run: |
-          cd 
+          cd /runner
           pwd
           ls
           docker build -t ${{ secrets.DOCKER_ID }}/damo-backend .
