Fix: 파일 확인을 위한 gradle.yml 수정

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -52,7 +52,7 @@ jobs:
 
       - name: docker image build
         run: |
-          cd /runner
+          cd /home/runner/runners
           pwd
           ls
           docker build -t ${{ secrets.DOCKER_ID }}/damo-backend .
