--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -65,5 +65,5 @@ jobs:
         script: |
           sudo docker rm -f $(docker ps -qa)
           sudo docker pull ${{ secrets.DOCKER_ID }}/damo-backend
-          run -d -p 8080:8080 ${{ secrets.DOCKER_ID }}/damo-backend
-          docker image prune -f
+          sudo docker run -d -p 8080:8080 ${{ secrets.DOCKER_ID }}/damo-backend
+          sudo docker image prune -f
