--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -48,10 +48,7 @@ jobs:
       run: docker login -u ${{ secrets.DOCKER_ID }} -p ${{ secrets.DOCKER_PASSWORD }}
 
     - name: docker image build
-      run: |
-        pwd
-        ls
-        docker build -t ${{ secrets.DOCKER_ID }}/damo-backend .
+      run: docker build -t ${{ secrets.DOCKER_ID }}/damo-backend .
 
     - name: docker push
       run: docker push ${{ secrets.DOCKER_ID }}/damo-backend
