--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -60,7 +60,7 @@ jobs:
         username: ubuntu
         key: ${{ secrets.KEY }}
         script: |
-          sudo docker rm -f $(docker ps -qa)
+          sudo docker-compose down
           sudo docker pull ${{ secrets.DOCKER_ID }}/damo-backend
-          sudo docker run -d -p 8080:8080 ${{ secrets.DOCKER_ID }}/damo-backend
+          sudo docker-compose up -d
           sudo docker image prune -f
