Fix: 배포 script 수정

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,19 +23,24 @@ jobs:
       run: |
         cd ./src/main/resources
         touch ./application-db.yml
-        echo "${{ secrets.DATABASE }}" >> ./application-database.yml
+        echo "${{ secrets.DATABASE }}" >> ./application-db.yml
+        cat ./application-db.yml
       shell: bash
 
     - name: make application-oauth.yml
       run: |
+        cd ./src/main/resources
         touch ./application-oauth.yml
-        echo "${{ secrets.OAUTH }}" >> ./application-database.yml
+        echo "${{ secrets.OAUTH }}" >> ./application-oauth.yml
+        cat ./application-oauth.yml
       shell: bash
 
     - name: make application-server.yml
       run: |
+        cd ./src/main/resources
         touch ./application-server.yml
-        echo "${{ secrets.SERVER }}" >> ./application-database.yml
+        echo "${{ secrets.SERVER }}" >> ./application-server.yml
+        cat ./application-server.yml
       shell: bash
 
     - name: Build with Gradle
