Setting: grafana 관련 ignore 설정

--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,9 @@ local.properties
 .recommenders
 .target/
 
+# monitor
+/grafana-data/**
+
 # ignore properties file
 config.properties
 /src/main/resources/config/**
