Feature: 배포 스크립트 수정

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -51,6 +51,14 @@ jobs:
         cat ./application-server.yml
       shell: bash
 
+    - name: make application-monitoring.yml
+      run: |
+        cd ./src/main/resources
+        touch ./application-monitoring.yml
+        echo "${{ secrets.MONITOR }}" >> ./application-monitoring.yml
+        cat ./application-monitoring.yml
+      shell: bash
+
     - name: Build with Gradle
       run: |
         sudo chmod +x ./gradlew
