--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,8 @@ local.properties
 # monitor
 /grafana-data/**
 /monitoring/**
+docker-compose.yml
+prometheus.yml
 
 # ignore properties file
 config.properties
