--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -5,7 +5,7 @@ spring:
   jpa:
     database: h2
     hibernate:
-    #      ddl-auto: create-drop
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
@@ -21,53 +21,49 @@ spring:
     init:
       mode: always
       #      data-locations: classpath:data.sql # 더미데이터 파일 연결
-      schema-locations: classpath:table.sql # 스케마 파일 연결
-  security:
-    oauth2:
-      client:
-        registration:
-          google:
-            client-id: ${GOOGLE_CLIENT_ID}
-            client-secret: ${GOOGLE_CLIENT_SECRET}
-            scope:
-              - email
-              - profile
+      schema-locations: classpath:table.sql # 스키마 파일 연결
 
-          kakao:
-            client-id: ${KAKAO_CLIENT_ID}
-            client-secret: ${KAKAO_CLIENT_SECRET}
-            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
-            scope:
-              - profile_nickname
-              - profile_image
-            authorization-grant-type: authorization_code
-            client-authentication-method: client_secret_post
-            client-name: Kakao
 
-          naver:
-            client-id: ${NAVER_CLIENT_ID}
-            client-secret: ${NAVER_CLIENT_SECRET}
-            scope:
-              - name
-              - email
-              - profile_image
-            client-name: Naver
-            authorization-grant-type: authorization_code
-            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+jwt:
+  secret: testtesttesttesttesttesttesttest
+  access-token-expired-time: 600000 # 10분, 1000L * 60L * 10L
+  refresh-token-expired-time: 1209600000 # 2주, 1000L * 60L * 60L * 24L * 14L
 
-        provider:
-          naver:
-            authorization-uri: https://nid.naver.com/oauth2.0/authorize
-            token-uri: https://nid.naver.com/oauth2.0/token
-            user-info-uri: https://openapi.naver.com/v1/nid/me
-            user-name-attribute: response
+oauth:
+  is-back: true
+  kakao:
+    client-id: ${KAKAO_CLIENT_ID}
+    client-secret: ${KAKAO_CLIENT_SECRET}
+    back-redirect-uri: http://localhost:8080/oauth/back/kakao
+    scope:
+      - profile_nickname
+      - profile_image
+  naver:
+    client-id: ${NAVER_CLIENT_ID}
+    client-secret: ${NAVER_CLIENT_SECRET}
+    scope:
+      - name
+      - email
+      - profile_image
+    back-redirect-uri: http://localhost:8080/oauth/back/naver
+  google:
+    client-id: ${GOOGLE_CLIENT_ID}
+    client-secret: ${GOOGLE_CLIENT_SECRET}
+    back-redirect-uri: http://localhost:8080/oauth/back/google
+    scope:
+      - email
+      - profile
 
-          kakao:
-            authorization-uri: https://kauth.kakao.com/oauth/authorize
-            token-uri: https://kauth.kakao.com/oauth/token
-            user-info-uri: https://kapi.kakao.com/v2/user/me
-            user-name-attribute: id
-
+management:
+  endpoints:
+    web:
+      base-path: ${MONITORING_BASE_PATH}
+      exposure:
+        include: ${MONITORING_INCLUDE}
+server:
+  tomcat:
+    mbeanregistry:
+      enabled: true
 
 logging:
   level:
